Fix overflow issue with Windows Chrome

--- a/client/components/cover-page/cover-page.module.scss
+++ b/client/components/cover-page/cover-page.module.scss
@@ -14,6 +14,7 @@
   align-items: flex-end;
   justify-items: center;
   grid-template-columns: 1fr;
+  max-width: 100%; //Fix issue with chrome on Windows
 
   @media screen and (max-width: $breakpoint-large) {
     display: flex;
